@@ -7,7 +7,7 @@ import io.undertow.server.HttpServerExchange;
 
 import java.io.BufferedInputStream;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.security.DigestInputStream;
 import java.security.MessageDigest;
 import java.util.HexFormat;
@@ -26,10 +26,10 @@ public final class ChecksumFileHandler extends ManagementHandler {
             var params = Utils.getParamsStruct(exchange);
 
             LOGGER.info("START Checksum file at " + params.filePath());
-            super.handleRequest(exchange);
+            checkState();
 
             MessageDigest md = MessageDigest.getInstance(MD5);
-            try (var is = new BufferedInputStream(Files.newInputStream(Paths.get(params.filePath())), STREAM_BUFFER_LENGTH);
+            try (var is = new BufferedInputStream(Files.newInputStream(Path.of(params.filePath())), STREAM_BUFFER_LENGTH);
                  DigestInputStream dis = new DigestInputStream(is, md))
             {
                 dis.readAllBytes();
