@@ -2,13 +2,11 @@ package inet.dmsx.server.handlers;
 
 import inet.dmsx.server.DMSXServer;
 import inet.dmsx.server.Utils;
-import inet.dmsx.server.constants.Response;
 import inet.dmsx.server.state.IllegalStateServerException;
 import io.undertow.server.HttpServerExchange;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 public final class DeleteFileHandler extends ManagementHandler {
 
@@ -22,9 +20,9 @@ public final class DeleteFileHandler extends ManagementHandler {
             var params = Utils.getParamsStruct(exchange);
 
             LOGGER.info("START Delete file at " + params.filePath());
-            super.handleRequest(exchange);
+            checkState();
 
-            Path fileToDeletePath = Paths.get(params.filePath());
+            Path fileToDeletePath = Path.of(params.filePath());
             Files.deleteIfExists(fileToDeletePath);
 
             RoutingHandlers.okHandler(exchange, Response.OK.getText());
