@@ -2,13 +2,11 @@ package inet.dmsx.server.handlers;
 
 import inet.dmsx.server.DMSXServer;
 import inet.dmsx.server.Utils;
-import inet.dmsx.server.constants.Response;
 import inet.dmsx.server.state.IllegalStateServerException;
 import io.undertow.server.HttpServerExchange;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 
 public final class UploadFileHandler extends ManagementHandler {
@@ -24,11 +22,11 @@ public final class UploadFileHandler extends ManagementHandler {
             var params = Utils.getParamsStruct(exchange);
 
             LOGGER.info("START Upload file at " + params.filePath());
-            super.handleRequest(exchange);
+            checkState();;
 
             var inputStream = exchange.getInputStream();
 
-            Path targetPath = Paths.get(params.filePath());
+            Path targetPath = Path.of(params.filePath());
             Files.copy(inputStream, targetPath, StandardCopyOption.REPLACE_EXISTING);
 
             RoutingHandlers.okHandler(exchange, Response.OK.getText());
